...
            Image(.twineLogo)
                .resizable()
                .scaledToFit()
                .frame(width: 62, height: 62)
                .accessibilityHidden(true)
                .padding(.bottom, 27)
            Text("Welcome to Twine")
                .startPageTitleStyle()
                .padding(.bottom, 9)
            subtitle
                .font(.subheadline)
                .foregroundStyle(.secondary)
                .multilineTextAlignment(.center)
...
